--- a/notefy/Info.plist
+++ b/notefy/Info.plist
@@ -49,26 +49,27 @@
 	<string>Location is required to show nearby notes! If not, you can&apos;t see the notes in nearby places.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is required to show nearby notes! If not, you can&apos;t see the notes in nearby places.</string>
-    
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb1238215872858109</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>1238215872858109</string>
-    <key>FacebookDisplayName</key>
-    <string>Notefy</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to Photos is required for posting images</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1238215872858109</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>1238215872858109</string>
+	<key>FacebookDisplayName</key>
+	<string>Notefy</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
