--- a/notefy/Info.plist
+++ b/notefy/Info.plist
@@ -6,6 +6,10 @@
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIcons</key>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -15,13 +19,41 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.5</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1238215872858109</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>1238215872858109</string>
+	<key>FacebookDisplayName</key>
+	<string>Notefy</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location is required to show nearby notes! If not, you can't see the notes in nearby places.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Location is required to show nearby notes! If not, you can't see the notes in nearby places.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is required to show nearby notes! If not, you can't see the notes in nearby places.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to Photos is required for posting images</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -33,8 +65,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -42,34 +72,6 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>NSLocationUsageDescription</key>
-	<string>Location is required to show nearby notes! If not, you can&apos;t see the notes in nearby places.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Location is required to show nearby notes! If not, you can&apos;t see the notes in nearby places.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location is required to show nearby notes! If not, you can&apos;t see the notes in nearby places.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Access to Photos is required for posting images</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb1238215872858109</string>
-			</array>
-		</dict>
-	</array>
-	<key>FacebookAppID</key>
-	<string>1238215872858109</string>
-	<key>FacebookDisplayName</key>
-	<string>Notefy</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fb-messenger-api</string>
-		<string>fbauth2</string>
-		<string>fbshareextension</string>
 	</array>
 </dict>
 </plist>
